fix error struct, swag init
