# docs/swagger.json
@@ -35,8 +35,14 @@
                             "$ref": "#/definitions/domain.ResponseRegister"
                         }
                     },
+                    "409": {
+                        "description": "Duplicate record",
+                        "schema": {
+                            "$ref": "#/definitions/response.ErrorResponse"
+                        }
+                    },
                     "422": {
-                        "description": "Unprocessable Entity",
+                        "description": "Form validation error",
                         "schema": {
                             "$ref": "#/definitions/response.ErrorResponse"
                         }
@@ -86,10 +92,24 @@
                 }
             }
         },
+        "response.ErrorMessageResponse": {
+            "type": "object",
+            "properties": {
+                "attribute": {},
+                "code": {
+                    "type": "string"
+                },
+                "message": {
+                    "type": "string"
+                }
+            }
+        },
         "response.ErrorResponse": {
             "type": "object",
             "properties": {
-                "error": {}
+                "error": {
+                    "$ref": "#/definitions/response.ErrorMessageResponse"
+                }
             }
         }
     }
